Version 2.8.0 - 2013-04-22
* Bug fixes (see mercurial logs for details)
* Use origin Reference on Invoice Line and Stock Move
* Allow no delivery time on product supplier

Version 2.6.0 - 2012-10-22
* Bug fixes (see mercurial logs for details)
* Manage negative amount in purchase

Version 2.4.0 - 2012-04-24
* Bug fixes (see mercurial logs for details)
* Add cache on amount fields in readonly states
* Use the most used currency by party on the 10 last records as default value
  for purchase and product_supplier
* Add currency on product_supplier
* Add a Function field delivery_date to purchase line
* Purchase date is required only at confirmation
* compute_supply_date returns only one date
* warehouse is not always required

Version 2.2.0 - 2011-10-25
* Bug fixes (see mercurial logs for details)

Version 2.0.0 - 2011-04-27
* Bug fixes (see mercurial logs for details)

Version 1.8.0 - 2010-11-01
* Bug fixes (see mercurial logs for details)

Version 1.6.0 - 2010-05-13
* Bug fixes (see mercurial logs for details)
* Use model singleton to define which purchase sequence to use
* Add default search value on purchase

Version 1.4.0 - 2009-10-19
* Bug fixes (see mercurial logs for details)
* Migrate packing* objects and tables to shipment*

Version 1.2.0 - 2009-04-20
* Bug fixes (see mercurial logs for details)
* Use the purchase uom to compute purchase price from product supplier
* Add buttons to handle invoice and packing exceptions
* Allow egg installation

Version 1.0.0 - 2008-11-17
* Initial release