@@ -163,6 +163,30 @@ this repository contains the full copyright notices and license terms. -->
             <field name="group" ref="group_purchase"/>
         </record>
 
+        <record model="ir.action.act_window" id="act_purchase_invoice_relate">
+            <field name="name">Purchases</field>
+            <field name="res_model">purchase.purchase</field>
+            <field name="domain">[('invoices', 'in', [Eval('id')])]</field>
+        </record>
+        <record model="ir.action.act_window.view"
+            id="act_purchase_invoice_relate_view1">
+            <field name="sequence" eval="10"/>
+            <field name="view" ref="purchase_view_tree"/>
+            <field name="act_window" ref="act_purchase_invoice_relate"/>
+        </record>
+        <record model="ir.action.act_window.view"
+            id="act_purchase_invoice_relate_view2">
+            <field name="sequence" eval="20"/>
+            <field name="view" ref="purchase_view_form"/>
+            <field name="act_window" ref="act_purchase_invoice_relate"/>
+        </record>
+        <record model="ir.action.keyword"
+            id="act_purchase_invoice_relate_keyword">
+            <field name="keyword">form_relate</field>
+            <field name="model">account.invoice,-1</field>
+            <field name="action" ref="act_purchase_invoice_relate"/>
+        </record>
+
         <menuitem name="Reporting" parent="menu_purchase"
             id="menu_reporting" sequence="100" active="0"/>
 
