@@ -1,3 +1,5 @@
+* Replace reference copying by relate
+
 Version 2.8.0 - 2013-04-22
 * Bug fixes (see mercurial logs for details)
 * Use origin Reference on Invoice Line and Stock Move
